# ts_dsm

./: .gitignore  .pre-commit-config.yaml  .ts_pre_commit_config.yaml  Jenkinsfile  Jenkinsfile.conda  Jenkinsfile.deploy  README.rst  SConstruct  pyproject.toml  setup.cfg  setup.py
.githooks/: pre-commit
bin.src/: run_dsm.py  shutdown_dsm.py  startup_dsm.py
conda/: meta.yaml
doc/: conf.py  developer-guide.rst  index.rst  manifest.yaml  requirements.txt  version-history.rst  version_history.rst
doc/configuration/: configuration.rst
doc/developer-guide/: developer-guide.rst
doc/news/: DM-49796.doc.rst  DM-49796.misc.1.rst  DM-49796.misc.3.rst  DM-49796.misc.rst
doc/user-guide/: user-guide.rst
docker/: Dockerfile
python/lsst/ts/dsm/: __init__.py  dsm_csc.py  shutdown_dsm.py  utils.py
schema/: DSM.yaml
tests/: test_csc.py  test_utils.py
tests/data/config/: _labels.yaml  alternate.yaml  default.yaml  fast_simulation.yaml  slow_simulation.yaml
ups/: ts_dsm.table
