[build-system]
requires = [ "setuptools", "setuptools-scm[toml]" ]
build-backend = "setuptools.build_meta"

[project]
name = "ts_dsm"
description = "CSC for Dome Seeing Monitor."
license = { text = "GPL3" }
classifiers = [ "Programming Language :: Python :: 3" ]
urls = { documentation = "https://jira.lsstcorp.org/secure/Dashboard.jspa", repository = "https://github.com/lsst-ts/ts_dsm" }
dynamic = [ "version" ]
dependencies = [ "asyncinotify" ]

[project.scripts]
run_dsm = "lsst.ts.dsm:run_dsm"
shutdown_dsm = "lsst.ts.dsm:shutdown_dsm"

[tool.setuptools.dynamic]
version = { attr = "setuptools_scm.get_version" }

[tool.setuptools.packages.find]
where = [ "python" ]

[tool.setuptools_scm]


[tool.pytest.ini_options]
asyncio_mode = "auto"

[project.optional-dependencies]
dev = [
  "documenteer[pipelines]"
]
